--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.117"
-range-set = "0.0.11"
+range-set-blaze = "0.1.16"
+roaring = "0.10.6"
 ptree = "0.4.0"
+rand = "0.8"
